--- a/src/App.css
+++ b/src/App.css
@@ -340,6 +340,8 @@ input[type="password"] {
   transition:all 0.3s ease !important;
   height: calc(100vh - 73px);
   overflow-y: scroll;
+  padding: 0%;
+  margin: 0%;
 }
 
 .sidebar.open {
@@ -388,7 +390,7 @@ input[type="password"] {
   align-items: center;
   text-align: center;
   font-size: 99%;
-  padding: 0% 2% 0% 13%;
+  padding: 0% 2% 0% 7%;
   margin-top: 1.83rem;
   gap: 10px;
   transition: all 0.1s;
@@ -422,7 +424,7 @@ color: #7939FF !important;
     min-height: calc(100vh - 62px) !important;
   }
   .sideLinks{
-    padding: 0% 0% 0% 11% !important;
+    padding: 0% 0% 0% 5.4% !important;
     margin-top: 1.66rem !important;
     gap: 6px !important;
     font-size: 100% !important;
@@ -479,8 +481,8 @@ color: #7939FF !important;
   margin-left: 1%;
   align-items: center;
   justify-content: center;
-  width: 2.2rem;
-  height: 2.2rem;
+  width: 2.5rem;
+  height: 2.5rem;
   background-color: transparent;
   color: #000;
   /* font-size: 200%; */
@@ -490,10 +492,6 @@ color: #7939FF !important;
 .bars:hover {
   background-color: #8a4bfffb;
   border-radius: 50%;
-}
-
-.bars:active {
-  background-color: #9a6bffe7;
 }
 
 .barsIcon {
@@ -636,6 +634,11 @@ color: #7939FF !important;
 
 .pfBtn:active {
   background-color: #672ee2 !important;
+}
+
+.pfBtn:focus {
+  background-color: #672ee2;
+  box-shadow: 0 0 0 0.2rem rgba(145, 84, 255, 0.20);
 }
 
 .pfHeader {
@@ -1656,6 +1659,23 @@ input[type="file"]::placeholder {
   .navLogo-container {
     left: 7% !important;
   }
+  .bars:active {
+    background-color: transparent;
+  }
+  .side-assContainer {
+    width: 100%;
+    margin-left: 2% !important;
+    margin-right: 0% !important;
+    padding-right: 0% !important;
+  }
+  .side-assRow {
+    width: 100% !important;
+    display: inline !important;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: auto !important;
+    margin: auto !important;
+  }
 }
 
 /* .announcements-hr {
@@ -1737,11 +1757,7 @@ input[type="file"]::placeholder {
 .assignment-container, .assignment-container2 {
   height: max-content;
   width: max-content;
-}
-
-.assignment-container {
   margin-bottom: 2%;
-  /* margin-right: 8%; */
 }
 
 .assignment-header {
@@ -1844,8 +1860,8 @@ input[type="file"]::placeholder {
 .inProgress-ass {
   /* max-width: 69%; */
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  align-items: end;
+  /* justify-content: space-between; */
 }
 
 .upAss-container {
@@ -2837,6 +2853,11 @@ iframe {
   background-color: #6d40ce !important;
 }
 
+.save-noteBtn:focus {
+  background-color: #5f35b9;
+  box-shadow: 0 0 0 0.2rem rgba(145, 84, 255, 0.20);
+}
+
 .note-label {
   font-weight: bold;
   font-size: 200%;
@@ -3256,6 +3277,20 @@ iframe {
   .logOutModalBtn-container {
     margin-top: 0.8rem !important;
   }
+  .side-assContainer {
+    width: 100%;
+    margin-right: 0% !important;
+    padding-right: 0% !important;
+    margin-left: 2% !important;
+  }
+  .side-assRow {
+    width: 100% !important;
+    display: inline !important;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: auto !important;
+    margin: auto !important;
+  }
 }
 
 .logOutModal-container {
@@ -3458,5 +3493,19 @@ iframe {
 
 .bell-container:hover {
   background-color: #8d57fff3;
+}
+
+.side-assContainer {
+  width: 100%;
+  margin: 0 0 0 auto;
+}
+
+.side-assRow {
+  width: 50%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding: 0%;
+  margin: 0%;
 }
 
