--- a/src/App.css
+++ b/src/App.css
@@ -329,6 +329,7 @@ input[type="password"] {
   max-width: 200px;
   transition: width 0.3s ease;
   display: flex;
+  /* background: #121212e6; */
   background: #000;
   color: #fff;
   /* height: 100%;
@@ -337,7 +338,7 @@ input[type="password"] {
   border-bottom-right-radius: 13px;
   /* position: fixed; */
   /* bottom: 0; */
-  transition:all 0.3s ease !important;
+  /* transition:all 0.3s ease !important; */
   height: calc(100vh - 73px);
   overflow-y: scroll;
   padding: 0%;
@@ -544,8 +545,11 @@ color: #7939FF !important;
 .dropdownMenu {
   z-index: 300;
   position: absolute;
-  background-color: #000;
+  /* background-color: #000; */
+  background-color: #fff;
   color: #fff;
+  /* color: #000; */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   /* width: auto; */
   right: 0px;
   top: 62px;
@@ -560,10 +564,12 @@ color: #7939FF !important;
 .pfMenu {
   /* width: 100%; */
   /* padding: 16px; */
-  background-color: #000;
+  /* background-color: #000; */
+  background-color: #fff;
+  color: #000;
   border: none;
   text-decoration: none;
-  color: #fff;
+  /* color: #fff; */
   font-size: 17px;
   display: flex;
   align-items: center;
@@ -585,7 +591,8 @@ color: #7939FF !important;
 
 .hrPfMenu {
   padding: 0;
-  margin: 10px 6px;
+  margin: 10px 1px;
+  color: #000;
 }
 
 .content-container {
@@ -1454,6 +1461,18 @@ input[type="file"]::placeholder {
   }
   .photoOrAudio-container {
     height: 9rem !important;
+    width: 100% !important;
+  }
+  .quiz-timeContainer {
+    margin-top: 1% !important;
+    right: 0 !important;
+    width: 7.7rem !important;
+    height: 2rem !important;
+  }
+  .quiz-timeLeft {
+    text-align: center;
+    font-size: 100% !important;
+    padding: 3% !important;
   }
   .page-container {
     width: 97.5% !important;
@@ -1647,9 +1666,13 @@ input[type="file"]::placeholder {
     width: 7.7rem !important;
     height: 7.7rem !important;
   }
-  /* .question-pages {
-    right: 4% !important;
-  } */
+  .question-pages {
+    top: 24%;
+  }
+  .quiz-timeContainer {
+    top: 15%;
+    right: 3% !important;
+  }
   .all-answers {
     width: 100% !important;
   }
@@ -2280,7 +2303,14 @@ input[type="file"]::placeholder {
 
 .photoOrAudio-container {
   height: 13.6rem;
-  width: 75%;
+  /* width: 75%; */
+  width: 54%;
+  display: flex;
+  align-items: center;
+}
+
+.photoOrAudio {
+  margin-bottom: 14%;
 }
 
 .page-container {
@@ -2356,12 +2386,35 @@ input[type="file"]::placeholder {
   width: max-content;
 }
 
+.quiz-timeContainer {
+  margin-top: 3rem;
+  /* margin-right: 14%; */
+  right: 15.5rem;
+  position: fixed;
+  width: 11rem;
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quiz-timeLeft {
+  /* position: absolute;
+  right: 40%; */
+  text-align: center;
+  font-size: 140%;
+  font-weight: bold;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border: 1px solid #000;
+  padding: 4%;
+}
+
 .question-pages {
   position: absolute;
   right: 4%;
   width: 10rem;
   /* margin-right: 2%; */
-  margin-top: 1.6%;
+  margin-top: 1%;
   display: ruby;
   display: flex;
   align-items: center;
@@ -3534,14 +3587,15 @@ iframe {
   position: absolute;
   top: 100%;
   right: 0;
-  width: 200px;
-  background-color: #202124;
-  border: 1px solid #333;
-  border-radius: 4px;
+  width: 30rem;
+  /* background-color: #202124; */
+  background-color: #fff;
+  /* border: 1px solid #333; */
+  border-radius: 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 10;
+  z-index: 2000;
   color: #fff;
-  height: 16rem;
+  height: 26.5rem;
 }
 
 .notification-dropdown-item {
