--- a/src/App.css
+++ b/src/App.css
@@ -257,7 +257,7 @@ input[type="password"] {
   /* max-width: 420px; */
   border-radius: 0.5rem;
   border: 1px solid rgb(212, 212, 212);
-  padding: 10px 0px 10px 20px;
+  padding: 10px 7px 10px 20px;
   display: flex;
   align-items: center;
   box-shadow: 0 2px 4px 
@@ -265,7 +265,7 @@ input[type="password"] {
       rgba(0, 0, 0, .2);
 }
 #emailInput #email{
-  width: 83%;
+  width: 100%;
   /* padding: 10px 0; */
   border: 0;
   outline: 0;
@@ -282,12 +282,13 @@ input[type="password"] {
   /* max-width: 420px; */
   border-radius: 0.5rem;
   border: 1px solid rgb(212, 212, 212);
-  padding: 10px 6px 10px 20px;
+  padding: 10px 7px 10px 20px;
   display: flex;
   align-items: center;
   box-shadow: 0 2px 4px 
       rgba(0, 0, 0, .1), 0 8px 16px 
       rgba(0, 0, 0, .2);
+  position: relative;
 }
 #passwordInput #password{
   width: 100%;
@@ -299,10 +300,19 @@ input[type="password"] {
 /* #password::placeholder {
   font-size: 135%;
 } */
+
+.eyeIcon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* width: 10%; */
+  position: absolute;
+  right: 15px;
+}
 #passwordInput #eyeIcon{
   width: 30px;
   cursor: pointer;
-  opacity: 0.5;
+  opacity: 0.7;
 }
 #passwordInput #passwordIcon{
   width: 26px;
