--- a/src/App.css
+++ b/src/App.css
@@ -3669,3 +3669,279 @@ iframe {
   padding-bottom: 1rem;
 }
 
+.chat-container {
+  /* top: 0.5rem; */
+  width: 100%;
+  max-width: 66rem;
+  /* margin: auto; */
+  position: fixed;
+  bottom: 2rem;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #fff;
+  border-radius: 1rem;
+  /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); */
+}
+
+.chat-messages {
+  max-height: 40rem;
+  /* height: 555px; */
+  overflow-y: auto;
+  padding: 10px;
+}
+
+.message {
+  margin: 5px 0;
+  padding: 8px 15px;
+  border-radius: 10px;
+  word-wrap: break-word;
+  width: max-content;
+  max-width: 666px;
+  display: flex;
+}
+
+.user {
+  background-color: #7939ff;
+  color: #fff;
+  align-self: flex-end;
+  margin-left: auto;
+}
+
+.bot {
+  background-color: #4caf50;
+  color: #fff;
+  align-self: flex-start;
+  margin-right: auto;
+}
+
+.message-timestamp {
+  color: #888;
+  font-size: 0.8em;
+}
+
+.chat-input {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  /* padding: 0.5rem; */
+  border: 1px solid #ccc;
+  border-radius: 2rem;
+  position: relative;
+  height: 3rem;
+}
+
+.chat-input input {
+  border-radius: 2rem;
+  width: 100%;
+  height: 100%;
+  flex: 1;
+  padding: 8px 8px 8px 3.25rem;
+  border: none;
+  /* margin-right: 10px; */
+  outline: none;
+}
+
+.chat-input input:focus {
+  outline: 1px solid #7939ff;
+}
+
+.send-button {
+  position: absolute;
+  right: 0px;
+  /* left: 2px; */
+  padding: 8px;
+  width: 2.75rem;
+  height: 2.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  color: #7939FF;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.send-button:hover {
+  background-color: #7939FF;
+  color: #fff;
+}
+
+.send-icon {
+  font-size: 1.25rem;
+}
+
+.chat-mic {
+  position: absolute;
+  right: 5.25rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  color: #000;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  /* padding: 4px; */
+}
+
+.mic-icon {
+  padding: 6px;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.mic-icon:hover {
+  color: #fff;
+  border-radius: 50%;
+  background-color: #7939FF;
+}
+
+.chat-recordDelete {
+  position: absolute;
+  right: 8rem;
+  /* padding: 4px; */
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  color: #000;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.chat-deleteRecord {
+  position: absolute;
+  right: 5.75rem;
+  /* padding: 4px; */
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  color: #000;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.chat-recordDelete:hover, .chat-deleteRecord:hover {
+  color: #7939FF;
+}
+
+.delete-record {
+  width: 100%;
+  height: 100%;
+}
+
+.chat-gallery {
+  position: absolute;
+  right: 3rem;
+  /* padding: 4px; */
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  color: #000;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.chat-gallery:hover {
+  color: #7939FF;
+}
+
+.gallery-icon {
+  font-size: 1.5rem;
+}
+
+.chat-camera {
+  position: absolute;
+  /* right: 1px; */
+  left: 1px;
+  padding: 8px;
+  width: 2.75rem;
+  height: 2.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #7939ff;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.camera-icon {
+  font-size: 1.25rem;
+}
+
+.chat-camera:hover {
+  transform: scale(1.06);
+}
+
+.recorded-time {
+  color: #000;
+}
+
+.recorded-time:hover {
+  color: #7939ff;
+}
+
+.camera-model-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.camera-modal {
+  position: fixed;
+  top: 20%;
+  /* left: 0;
+  bottom: 0;
+  right: 0; */
+  /* width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity for the blur effect */
+}
+
+.modal-content {
+  position: relative;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.camera-modal video {
+  width: 100%;
+  max-width: 400px; /* Adjust as needed */
+  border-radius: 8px;
+}
+
